2005-09-07 Vicki Murley  <vicki@apple.com>

        Reviewed by Justin.
 
        - fix <rdar://problem/4246096> REGRESSION links to named anchors don't scroll to the right place (4825)

        This is really just a better fix for 4233844. Also consolidated manual-tests/scrollToAnchorWithNewline.html
	and the test case from Bugzilla bug 4825 into manual-tests/scrollToAnchor.html.

        Test cases added:
        * manual-tests/scrollToAnchor.html: Added.

        * khtml/xml/dom_nodeimpl.cpp:
        (DOM::ContainerNodeImpl::getUpperLeftCorner): when calculating scroll position, skip child nodes of the anchor
        if they do not have text boxes.

2005-09-07  Eric Seidel  <eseidel@apple.com>
        Fix by Tobias Lidskog <tobiaslidskog@mac.com>

        Reviewed by eseidel.

        * kcanvas/KCanvasCreator.cpp:
        (KCanvasCreator::createCanvasPathData):
        * kcanvas/device/quartz/KRenderingDeviceQuartz.mm:
        (KRenderingDeviceQuartz::contextForImage):
        * kcanvas/device/quartz/KRenderingPaintServerGradientQuartz.mm:
        (KRenderingPaintServerGradientQuartz::updateQuartzGradientCache):
        * ksvg2/svg/SVGDocumentImpl.cpp:
        (SVGDocumentImpl::~SVGDocumentImpl):
        Fixed several leaks.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=4868

2005-09-06  Darin Adler  <darin@apple.com>

        Reviewed by John Sullivan.

        - fixed storage leaks; one of the leaks caused these 3 bugs:

        <rdar://problem/4231952> leaks of DOMStringImpl called from HTMLTokenizer::processToken, seen running WebKit tests
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=4797>

        <rdar://problem/4233800> leak inside DOM::DocumentImpl::DocumentImpl, seen running webkit tests
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=4795>

        <rdar://problem/4232812> leaks of NodeImpl called from HTMLParser::textCreateErrorCheck, seen running webkit tests
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=4796>
